--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,20 @@
 p {
   font-family: Lato;
 }
+
+.calculator-wrapper {
+  background: silver;
+  padding: 25px 20px 20px 20px;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.ce {
+  margin-right: 10px ;
+  width: 36%;
+}
+
+.igual {
+  width: 36%;
+
+}
