--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
     </div>
     
   </div>
-  <div class="row justify-content-center mt-4">
-    <app-log></app-log>
+  <div class="row text-center">
+    <app-log class="col-8 offset-2"></app-log>
   </div>
 </div>
