--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="text-center calculator-wrapper col-8 offset-2">
-		<input [(ngModel)]="display" class="col-12 form-control" disabled type="text">
+		<input [(ngModel)]="display" class="text-right col-12 form-control" disabled type="text">
 
     <div class="mt-3 row">
       <div class="btn-wrapper col-12">
